added context to be able to change themes

--- a/src/components/Button/Button.stories.mdx
+++ b/src/components/Button/Button.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 import { PrimaryButton, SecondaryButton, TerciaryButton } from './Buttons';
 
-<Meta title="Design System/Components/Buttons" component={PrimaryButton} />
+<Meta title="Design System/Components/Buttons" />
 
 # Buttons
 
