random changes, sorry for the horrible commit

--- a/src/components/Button/Button.stories.mdx
+++ b/src/components/Button/Button.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
-import { PrimaryButton, SecondaryButton, TerciaryButton } from './Buttons';
+import { PrimaryButton, SecondaryButton, TerciaryButton } from './Button';
 
 <Meta title="Design System/Components/Buttons" />
 
