--- a/src/utils/Typography.stories.mdx
+++ b/src/utils/Typography.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Typeset } from '@storybook/addon-docs/blocks';
 
 import { typeScale, bbFonts } from './typography';
 
-<Meta title="Design System/Foundations/Typography" />
+<Meta title="Design System|Foundations/Typography" />
 
 # Typography
 
