added more docs

--- a/docs/about.stories.mdx
+++ b/docs/about.stories.mdx
@@ -1,8 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-import logo from './img/bb_logo.png';
-
-<Meta title="Design System|About " />
+<Meta title="Design System|Brand/About" />
 
 # About us
 
