--- a/docs/audience.stories.mdx
+++ b/docs/audience.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Design System|Audience" />
+<Meta title="Design System|Brand/Audience" />
 
 # Our Audience
 
