--- a/docs/voice.stories.mdx
+++ b/docs/voice.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Design System|Voice " />
+<Meta title="Design System|Brand/Voice " />
 
 # Voice & Tone
 
