--- a/docs/about.stories.mdx
+++ b/docs/about.stories.mdx
@@ -1,6 +1,11 @@
 import { Meta } from '@storybook/addon-docs/blocks';
+import logo from '../src/img/bb_logo.png';
 
-<Meta title="Design System|Brand/About" />
+<Meta title="Design System/Our Brand/About" />
+
+<img src={logo} height={150} />
+
+We’re your international, boutique, creative production company.
 
 # About us
 
