--- a/docs/audience.stories.mdx
+++ b/docs/audience.stories.mdx
@@ -1,12 +1,12 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Design System|Brand/Audience" />
+<Meta title="Design System/Our Brand/Audience" />
 
 # Our Audience
 
 _Who we are marketing to a.ka. the people that give us work_
 
-## Producers
+### Producers
 
 25-45 years old, works for an ad agency or big brand. Ambitious and organised and wants stuff to go smoooth. Into art, design, music, etc. Show them how we work to make everything clear and predictable.
 
@@ -16,7 +16,7 @@ _Who we are marketing to a.ka. the people that give us work_
 
 **Titles:** Digital producer, project manager, head of production
 
-## Marketers
+### Marketers
 
 30-50. Ambitious, busy, result focused. Into tech and innovative media. Show them how to work with digital to get results. Typically have performance related KPI’s. Usually on the brand or performance marketing team.
 
