--- a/src/Intro.stories.mdx
+++ b/src/Intro.stories.mdx
@@ -1,10 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-import logo from './img/bb_logo.png';
-
-<Meta title="Design System|Intro" />
-
-<img src={logo} height="100px" />
+<Meta title="Design System/Intro" />
 
 # Get started with BB Style Guide
 
