--- a/src/utils/Colors.stories.mdx
+++ b/src/utils/Colors.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs/blocks';
 import { bbColors, bbNeutrals, interfaceActions } from './colors';
 
-<Meta title="Design System|Foundations/Colors" />
+<Meta title="Design System/Foundations/Colors" />
 
 # Colors
 
